--- a/Pages/2Services/2Develope/development---4web.org
+++ b/Pages/2Services/2Develope/development---4web.org
@@ -1,5 +1,6 @@
 * Header
 Develop
+
 * Second
 - Program
 - Produce
@@ -7,17 +8,19 @@ Develop
 
 * Abstract
 
- The VR we develope is *Programmable*  The virtual expereince can be manipulated through inputs, such as code, player interfacing or phsyiological behaviors.  
+ The VR we develope is *programmable*  The virtual expereince can be manipulated through inputs, such as code, player interfacing or phsyiological behaviors.  
 
-Virtual Reality is an *interactive* software simulation, with positional tracking and player input.  Find below some of the many disciplines that make XR (virtual reality).
+The content *produced* can range from photo-real capture to entirely ficticious dreamscapes.  VR is the overlay of interactive elements within a 3D space for the player to engage the world around him.
 
-There are a variety of production techniques, tools and frameworks to make XR.   They are all synchronized in a software framework called a "game engine". 
+By *networking* the software you can experience with others.  This allows for joint expreineces, collaboration and sharing.  Further, it enables markets to exist, distributed file keeping and remote access/control to other devices, virtual and physical.   
+
+There are a variety of production techniques, tools and frameworks to make XR.   They are all synchronized in a software framework called a "game engine".
+
+ 
+* Content
+
 
 A *game engine* is used to create interactive 3D media (XR).  We build XR in game engines.  They are a powerful visualization tool for developing all the features of the internet, from netowrked play to social sharing, and secure payments, into a single application.    
- 
-
-
-* Content
 
 [GAME ENGINE GRAPHIC - DIAGRAM RAINBOW COLOR]
 
@@ -26,6 +29,8 @@ Game engines equip developers to custom design virtual environments, program pla
 Nova economizes the process of virtual reality (XR) development by adapting game engine builds (software executable) to create new VR expereinces.   By developing with foresight producers save time and money.   
 
 Some Game Engines you may have heard of are:
+
+[ ANOTHER GAME ENGINE GRAPHIC ]
 
 Unity, Unreal, Cryengine, GameMaker Studio, HTML5, Godot, OpenGL, Blender, Source, Lumberyard, Torque, Frostbite, Doom Engine, Havok, MonkeyEngine, Panda3D, PhyreEngine, Ren'Py, ORX, ORGE, HeroEngine,RenderWare,Freescape, LithTech, GoldBox
 
