--- a/Pages/1Solutions/3Publications/Financial Strat/Finstrat---4web.org
+++ b/Pages/1Solutions/3Publications/Financial Strat/Finstrat---4web.org
@@ -9,11 +9,14 @@ XR can be a tool to reduce internal costs, or increase sales.   You understand y
 * Abstract
 Together, we can devise and execute a plan to disrupt modern methods, accelerate business and earn a measurable return on the time, money and resources we invest.
 
-[text box: What industry?]
-[text box: what is the goal]
-[text box: who is the audience]
-[text box: what does the audience care about?]
-[text box: what does your superior care about?]
-[text box: what is the timing and budget?]
+- Hotels
+- Live Stream (phys Event)
+- Professional Service
+- Relocation Service
+- Festical
+- Ad-Analysis
+- Music Streaming
+- Department Development
 
-=== book an appointment
+
+
