--- a/Pages/1Solutions/2Consultation/Industry Insights/healthcare---4web.org
+++ b/Pages/1Solutions/2Consultation/Industry Insights/healthcare---4web.org
@@ -1,12 +1,19 @@
 * Header
 
-XR Health Care Solution 
+Consultation
+
  
 * Second
 
-Solve real health problems
+XR Health Care Solution: Solve real health problems
 
 * Abstract
 
+** 
 
 * Content
+
+creating lifelike sensory experience to incentivize the patient to work toward recovery
+What-relieving phantom pain that can often emerge during rehab or treatment process
+Why-Patients are often deincentivized or inflicted with mental blocks and the perception of pain
+How-Use of biometrics, haptics, 3D audio
