pagetable tactical moves

--- a/Pages/1Solutions/2Consultation/Industry Insights/Tactical Apps/marketingcrossindustry---4web.org
+++ b/Pages/1Solutions/2Consultation/Industry Insights/Tactical Apps/marketingcrossindustry---4web.org
@@ -1,8 +1,33 @@
 * Header
 
-Marketing 
+Tactical Applications
  
 * Second
 
 
+XR is Marketing's El Dorado
+
 * Abstract
+
+/coming soon/
+
+
+** Branding 
+*** Sponsor Event
+*** Product Placement
+*** Content Creation
+*** PR Stunting
+
+** Call to Action
+*** Sales
+*** Event Traffic
+*** Use App 
+*** View Content
+*** Join Community
+
+** Data
+*** Collecting
+*** Applying
+
+
+**** 
