--- a/Pages/3About nova/2Partnership/Productions/Past/Italiantrade---4web.org
+++ b/Pages/3About nova/2Partnership/Productions/Past/Italiantrade---4web.org
@@ -11,7 +11,30 @@ Italian Trade Agency
 /coming soon/
 
 ** Situation
-** Solution
+
+Italian Dine Out Week
+
+** Objective
+
+Drive foot traffic to the 26 restaurants that import the most italian goods into New York.   They 
+
+
+
 ** Execution
+
+Billboard in Time Square
+
+Web video
+
+Targeted distribution
+
+
 ** Results
+
+130% of goal
+
+Helped earn a 26 million dollar budget from Rome the following year.   
+
+
+
 
