--- a/Pages/3About nova/2Partnership/Productions/Past/Kelly---4web.org
+++ b/Pages/3About nova/2Partnership/Productions/Past/Kelly---4web.org
@@ -8,10 +8,37 @@ Kelly Vision
 
 * Abstract
 
-/coming soon/
-
 ** Situation
-** Solution
-** Execution
+
+Dr. Kelly was looking for a way to combine the mass reach of tradiational emdia with modern technologies of digital tracking to quantifiably measure his return on investment
+
+
+** Objective
+
+To get people in the door and start taking their considerations of vision enhancement seriously.
+
+Educate and welcome prospective patients into our family and computer system
+
+Evaluate the cost per eye.  
+
+Investment $30,000 to return $35 surgeries.  
+
+** Campaign
+
+Brand ambassador on 5 top media outlets for full scope of media deliverables.
+
+Promotion code to track business (interests, connections, bookings, payments.
+
+Adjusted content on the fly to improve ROI
+
 ** Results
+
+Delivered more than $20k in vision business in 21 days.
+
+100 surgeries in 10 months
+
+50+ phone calls received
+
+1,000 + text messages 
+
 
