--- a/Pages/3About nova/2Partnership/Partners/sponsor---4web.org
+++ b/Pages/3About nova/2Partnership/Partners/sponsor---4web.org
@@ -1,10 +1,21 @@
 * Header
 
-Sponsor
+Partners
 
 * Second
 
+Sponsors
+
 * Abstract
+
+What are you interested to sponsor?
+
+- Live Event Stream
+- Indie Game Release (product placement)
+- Customized Content
+- Hackathon
+- College Student Initiatives
+
 
 
 * Content
