--- a/Pages/3About nova/2Partnership/careers/designer---4web.org
+++ b/Pages/3About nova/2Partnership/careers/designer---4web.org
@@ -1,10 +1,27 @@
 * Header
 
-Designer
+Careers
 
 * Second
 
+Designers
+
 * Abstract
+
+Skills:
+- Blender
+- Illustrator
+- Photoshop
+- Animation
+- Sketching
+- Drawing 
+
+Characteristics:
+- observant
+- quick communicator
+- friendly
+- open minded
+- well traveled
 
 
 * Content
