--- a/Pages/3About nova/2Partnership/careers/developer---4web.org
+++ b/Pages/3About nova/2Partnership/careers/developer---4web.org
@@ -1,10 +1,26 @@
 * Header
 
-Developer
+Careers
 
 * Second
 
+Developer
+
 * Abstract
 
+Skills
+- WebGL
+- React
+- JS
+- Python
+- Systems
+
+
+Characteristics
+- Clear communicator
+- Prompt
+- Precise
+- Relaxed
+- self-motivated
 
 * Content
