--- a/Pages/3About nova/2Partnership/Partners/producer---4web.org
+++ b/Pages/3About nova/2Partnership/Partners/producer---4web.org
@@ -1,10 +1,12 @@
 * Header
 
-Producer
+Partner
 
 * Second
 
+Producer
+
 * Abstract
 
+Looking to bring an XR program to market?   Let us know what you want done and we'll get you a timeline and budget.   Clear direction and appropriate resources is all it takes to get a project off the ground
 
-* Content
