--- a/Pages/1Solutions/2Consultation/Industry Insights/Industry Solutions/broadcasting---4web.org
+++ b/Pages/1Solutions/2Consultation/Industry Insights/Industry Solutions/broadcasting---4web.org
@@ -1,10 +1,14 @@
 * Header
 
-XR Broadcasting Solution 
+Consultation
  
 * Second
 
+XR Broadcasting Solution 
+
+
 * Abstract
 
+ /coming soon/
 
 * Content
