--- a/Pages/1Solutions/2Consultation/Industry Insights/Industry Solutions/cinemaxr---4web.org
+++ b/Pages/1Solutions/2Consultation/Industry Insights/Industry Solutions/cinemaxr---4web.org
@@ -1,11 +1,11 @@
 * Header
+Consultation
 
-XR Cinematography Solution 
- 
 * Second
 
+XR Cinematography Solution 
 
 * Abstract
 
-
-* Content
+/coming soon/
+ 
