--- a/Pages/1Solutions/2Consultation/Industry Insights/Industry Solutions/gaminigtext---4web.org
+++ b/Pages/1Solutions/2Consultation/Industry Insights/Industry Solutions/gaminigtext---4web.org
@@ -3,9 +3,11 @@
 XR Gaming Solution 
  
 * Second
+
 Gamification will revolutionize education
 
 * Abstract
 
+The gaming industry leads by a fat margin insights on how to maximize player experiences.  
 
 * Content
