--- a/Pages/1Solutions/2Consultation/Industry Insights/Industry Solutions/relocation---4web.org
+++ b/Pages/1Solutions/2Consultation/Industry Insights/Industry Solutions/relocation---4web.org
@@ -1,22 +1,22 @@
 * Header
 
-World Peace
-
+XR Relocation Solution 
+ 
 * Second
-
-Imagine...
+Bloomaway
 
 * Abstract
 
-Virtual Reality will democratize experience.
 
-Consider how the internet democratized information. 
+Objective:  Learn about immersive media technologies (XR) such as virtual reality.
 
-The internet has globalized us.  We communicate, share, and do business with people around the world - most we've never met in person.  Maybe never seen their face or heard their voice - but we /know/ them.
+• Strategize how to leverage XR tech to inform your employees more
+about host cities prior to travel. We will increase preparedness
+and decrease workloads for people at post.
 
-XR empowers remote acess to in-person experiences, through shared virtual environments. 
+• Simplify complex productions and technologies. You will
+learn to create and deploy VR content with their existing global
+network.
 
-If we really knew what it was like to walk in another's shoes, we'd be humbled.  If we visited the places our governments declared as enemies, we'd ask more questions.   If we knew first hand the horrors of war, the inhumanity of greed, and the glory of love, we'd live differently.      
-
-Virtual Reality will democratize experience, and can bring world peace.
+• Integrate XR gradually to improve your current logistics models
 
