--- a/Pages/1Solutions/2Consultation/Industry Insights/Industry Solutions/educationtext---4web.org
+++ b/Pages/1Solutions/2Consultation/Industry Insights/Industry Solutions/educationtext---4web.org
@@ -8,5 +8,8 @@ Learn more
 
 * Abstract
 
+Universities as portals to the most advanced dimensions of media ever - a new era of exploration.   Maybe the new frontier of exploration isn't space, the ocean, or inward-awereness, but jumping into this digital world we've developed over the last 30 years.   
+
+Those with the leading technology tools (vessels) will venture the furthest, the fastest.   A new era of exploration will be lead by tech-titans and educational institutions.  Both are the leading educators in the world.   
 
 * Content
