--- a/Pages/1Solutions/2Consultation/Industry Insights/Industry Solutions/entertainment---4web.org
+++ b/Pages/1Solutions/2Consultation/Industry Insights/Industry Solutions/entertainment---4web.org
@@ -4,7 +4,10 @@ XR Entertainment Solution
  
 * Second
 
+Be the story
+
 * Abstract
 
+Media and live entertainment are about to be fundamentally rocked by computer sciences and gaming.  The two are on the verge of merging in cahoots with entertainers to run away with the industry.
 
 * Content
