--- a/Pages/1Solutions/2Consultation/Industry Insights/Industry Solutions/performingarts---4web.org
+++ b/Pages/1Solutions/2Consultation/Industry Insights/Industry Solutions/performingarts---4web.org
@@ -4,10 +4,16 @@ XR Cross Industry Solution
  
 * Second
 
+Tactical Applications of XR
 
 * Abstract
 
 - Training
 - Marketing
-- Designing
+- World Peace
 - Fund Raising
+- On-boarding
+- Selling
+- Collaboration
+- Designing
+
