--- a/Pages/1Solutions/2Consultation/Industry Insights/Industry Solutions/telecommunications---4web.org
+++ b/Pages/1Solutions/2Consultation/Industry Insights/Industry Solutions/telecommunications---4web.org
@@ -4,7 +4,10 @@ XR Telecommunications Solution
  
 * Second
 
+Live in Digital Avatar
+
 * Abstract
 
+Virtual chats are the most successful feature in the XR industry.  They are attracting thousands of innovators, leaders and visionaries.  The prefered way to connect will evolve as it has over these last several years from the home phone, to the mobile, email, chat rooms, text messaging, social media, video chat, and now virtual chatrooms. 
 
 * Content
